carina-tui/src/snapshots/carina_tui__tui_snapshot_tests__snapshot_all_create.snap
---
source: carina-tui/src/tui_snapshot_tests.rs
expression: output
---
┌ Plan (Plan: 3 to create, 0 to update, 0 to delete) ──────────────────────────────────────────────────────────────────┐
│+ ec2.vpc vpc                                                                                                         │
│    ├── + ec2.route_table rt                                                                                          │
│    └── + ec2.subnet subnet                                                                                           │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Details ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│+ ec2.vpc vpc                                                                                                         │
│                                                                                                                      │
│  cidr_block: "10.0.0.0/16"                                                                                           │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Tab switch panel  j/k navigate/scroll  / search  q/Esc quit
