carina-tui/src/snapshots/carina_tui__tui_snapshot_tests__snapshot_create_with_schema.snap
---
source: carina-tui/src/tui_snapshot_tests.rs
expression: output
---
┌ Plan (Plan: 1 to create, 0 to update, 0 to delete) ──────────────────────────────────────────────────────────────────┐
│+ ec2.vpc vpc                                                                                                         │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Details ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│+ ec2.vpc vpc                                                                                                         │
│                                                                                                                      │
│  cidr_block: "10.0.0.0/16"                                                                                           │
│  enable_dns_hostnames: false  # default                                                                              │
│  enable_dns_support: true  # default                                                                                 │
│  default_security_group_id: (known after apply)                                                                      │
│  vpc_id: (known after apply)                                                                                         │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 / search  ↑↓/jk navigate  Tab switch panel  q/Esc quit
