carina-tui/src/snapshots/carina_tui__tui_snapshot_tests__snapshot_deferred_for_create.snap
---
source: carina-tui/src/tui_snapshot_tests.rs
assertion_line: 260
expression: output
---
┌ Plan (Plan: 0 to create (+1 deferred, count unknown), 0 to update, 0 to delete) ─────────────────────────────────────┐
│+ aws.route53.Record validation_records[?]                                                                            │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Details ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│+ aws.route53.Record validation_records[?]                                                                            │
│                                                                                                                      │
│  deferred: count known after cert applies  from cert.domain_validation_options                                       │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 / search  ↑↓/jk navigate  Tab switch panel  Enter detail  q/Esc quit
