carina-tui/src/snapshots/carina_tui__tui_snapshot_tests__snapshot_deferred_for_with_paired_destroy.snap
---
source: carina-tui/src/tui_snapshot_tests.rs
assertion_line: 335
expression: output
---
┌ Plan (Plan: 0 to create (+1 deferred, count unknown), 0 to update, 1 to delete) ─────────────────────────────────────┐
│+/- aws.route53.Record [from cert.domain_validation_options]                                                          │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Details ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│+/- aws.route53.Record [from cert.domain_validation_options]                                                          │
│                                                                                                                      │
│  - destroying validation_records[0]                                                                                  │
│  + replaced by deferred for-loop, count known after cert applies                                                     │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 / search  ↑↓/jk navigate  Tab switch panel  Enter detail  q/Esc quit
