carina-tui/src/snapshots/carina_tui__tui_snapshot_tests__snapshot_deferred_replace.snap
---
source: carina-tui/src/tui_snapshot_tests.rs
expression: output
---
┌ Plan (Plan: 1 to create, 0 to update, 1 to replace, 1 to delete; N to replace after cert applies.) ──────────────────┐
│+ acm.Certificate cert                                                                                                │
│    └── +/- aws.route53.Record validation_records[*] (N records after cert applies)                                   │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Details ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│+/- aws.route53.Record validation_records[*] (N records after cert applies)                                           │
│                                                                                                                      │
│  <- for opt in cert.domain_validation_options                                                                        │
│  hosted_zone_id: "Z123"                                                                                              │
│  name: (known after cert applies)                                                                                    │
│  resource_records: (known after cert applies)                                                                        │
│  ttl: 60                                                                                                             │
│  type: "CNAME"                                                                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 / search  ↑↓/jk navigate  Tab switch panel  Enter detail  q/Esc quit
