carina-tui/src/snapshots/carina_tui__tui_snapshot_tests__snapshot_deposed_delete.snap
---
source: carina-tui/src/tui_snapshot_tests.rs
expression: output
---
┌ Plan (Plan: 0 to create, 0 to update, 1 to delete) ──────────────────────────────────────────────────────────────────┐
│- ec2.Vpc main (deposed vpc-old)                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Details ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│- ec2.Vpc main (deposed vpc-old)                                                                                      │
│                                                                                                                      │
│  identifier: vpc-old                                                                                                 │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 / search  ↑↓/jk navigate  Tab switch panel  Enter detail  q/Esc quit
